@startuml
class Program {
    - {static} Main(args:string[]) : void
}

abstract class Personaje {
    # x : int
    # y : int
    - apariencia : char
    - objetivo : Personaje
    + <<get>> <<set>> Apariencia : char
    + Personaje(apariencia : char)
    + getx() : int
    + gety() : int
    + getapariencia() : char
    + irA(x : int, y : int) : void
    + Perseguir() : void
    + <<virtual>> Atacar() : void
    + <<virtual>> RecibirAtaque(atacante : Personaje) : void
}

class Zombie {
   + Zombie()  
   + Teleportar() : void
   + <<override>> Atacar() : void
   + <<override>> RecibirAtaque(atacante : Personaje) : void
}

class Esqueleto {
   + Esqueleto()
   + Ocultar()  
   + <<override>> Atacar() : void
   + <<override>> RecibirAtaque(atacante : Personaje) : void
}

class Jugador {
   + Jugador()
   + Mover() : void
}

Program ..> Personaje
Program ..> Random
Personaje <|-- Jugador
Personaje <|-- Zombie
Personaje <|-- Esqueleto
Personaje - Personaje 
@enduml
